# MobileRobot_Sandbox

./: CMakeLists.txt  package.xml
config/: amcl_config.rviz  ball_tracker_params_example.yaml  controllers.yaml  costmap_common_params.yaml  costmap_params.yaml  gazebo_params.yaml  joystick.yaml  mapper_params.yaml  odom_based_motion.rviz  playground_save.pgm  playground_save.yaml  playground_serial.data  slam_map.rviz  twist_mux.yaml
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros_control.xacro
launch/: amcl.launch  ball_tracker.launch  navigation.launch  rsp.launch  rsp.launch.py  slam.launch  twist_mux.launch
src/: detect_ball.py  detect_ball_3d.py  follow_ball.py  process_image.py
worlds/: playground.world
